syntax = "proto3";
package proto;

option go_package = "github.com/hjwalt/flows/protobuf";

message JoinKey {
  string persistence_id = 1;
}
